fix :issues
